--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,6 @@ include_directories(third/glm/glm)
 
 add_library(FooEngineGraphics STATIC ${FOOENGINE_SOURCES} ${FOOENGINE_HEADERS})
 target_link_libraries(FooEngineGraphics OpenGL::GL glfw)
+
+add_executable(main main.cpp)
+target_link_libraries(main FooEngineGraphics)
