soil library added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(third/glfw)
 add_subdirectory(third/glm/glm)
+add_subdirectory(third/SOIL)
 
 find_package(OpenGL REQUIRED)
 
@@ -15,9 +16,10 @@ file(GLOB_RECURSE FOOENGINE_HEADERS
 
 include_directories(third/glfw/include)
 include_directories(third/glm/glm)
+include_directories(third/SOIL/inc/SOIL)
 
 add_library(FooEngineGraphics STATIC ${FOOENGINE_SOURCES} ${FOOENGINE_HEADERS})
-target_link_libraries(FooEngineGraphics OpenGL::GL glfw GLEW)
+target_link_libraries(FooEngineGraphics OpenGL::GL glfw GLEW SOIL)
 
 add_executable(main main.cpp)
 target_link_libraries(main FooEngineGraphics)
