--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third/glm"]
 	path = third/glm
 	url = https://github.com/g-truc/glm
+[submodule "third/SOIL"]
+	path = third/SOIL
+	url = https://github.com/paralin/soil
