--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(third/glfw)
 add_subdirectory(third/glm/glm)
-add_subdirectory(third/SOIL)
 add_subdirectory(third/assimp)
 
 find_package(OpenGL REQUIRED)
@@ -19,12 +18,12 @@ file(GLOB_RECURSE FOOENGINE_HEADERS
 
 include_directories(third/glfw/include)
 include_directories(third/glm/glm)
-include_directories(third/SOIL/inc/SOIL)
 include_directories(third/assimp/include)
+include_directories(third/stb)
 
 add_library(FooEngineGraphics STATIC ${FOOENGINE_SOURCES} ${FOOENGINE_HEADERS})
 
-target_link_libraries(FooEngineGraphics OpenGL::GL glfw GLEW SOIL assimp)
+target_link_libraries(FooEngineGraphics OpenGL::GL glfw GLEW assimp)
 
 add_executable(main main.cpp)
 target_link_libraries(main FooEngineGraphics)
